<resources>
    <string name="app_name">Weather Q Info</string>
    <string name="city_name">City name</string>
    <string name="get_weather">Get Weather</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="add">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="map">Map</string>
    <string name="my_location">My Location</string>
    <string name="show_cities">Show Cities</string>
    <string name="info_screen">Info Screen</string>
    <string name="manage_api_key">Manage Api Key</string>
    <string name="enter_your_operweathermap_org_api_key_here">your operweathermap.org API key</string>
    <string name="get_api_key">Get your Api key here</string>
    <string name="search">Search</string>
    <string name="store_api_key">Store Api Key</string>
    <string name="load_api_key">Load Api Key</string>
    <string name="remove_api_key">Remove Api Key</string>
    <string name="remove_weather_data">Remove Weather Data</string>
    <string name="get_location">Get Location</string>
    <string name="refresh_weather_data">Refresh Weather Data</string>
</resources>