<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_all"
        android:icon="@drawable/ic_remove_all"
        android:title="@string/remove_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_weather"
        android:icon="@drawable/ic_remove_all"
        android:title="@string/remove_weather_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh_weather"
        android:title="@string/refresh_weather_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cities"
        android:title="@string/show_cities"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_info"
        android:title="@string/info_screen"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_api_key"
        android:title="@string/manage_api_key"
        app:showAsAction="never"/>
</menu>